2004-09-11  David Bateman  <dbateman@free.fr>

	* ov-fcn-handle.cc (octave_fcn_handle::save_ascii,
	octave_fcn_handle::load_ascii, octave_fcn_handle::save_binary,
	octave_fcn_handle::load_binary, octave_fcn_handle::save_hdf5,
	octave_fcn_handle::load_hdf5): New functions. 
	* ov-fcn-handle.h: Provide decls.

	* ov-fcn-inline.cc (octave_fcn_inline::load_ascii):
	Allow spaces in saved function.
 	(octave_fcn_inline::save_hdf5): Properly close all HDF5 objects.

	* ls-oct-ascii.cc (read_ascii_data): Check return type of 
	<octave_value>.load_ascii for errors reading the variables

	* variables.cc (lookup_function_handle, clear_variable,
	clear_symbol): New functions.
	* variables.h: Provide decls.

2004-09-10  John W. Eaton  <jwe@octave.org>

	* ov-builtin.cc (octave_builtin::do_multi_index_op): Use unwind
	protect frame instead of a single unwind_protect::run.
	* ov-mapper.cc (octave_mapper::do_multi_index_op): Likewise.

	* data.cc (fill_matrix, identity_matrix):
	Also allow logical data type.

2004-09-10  David Bateman  <dbateman@free.fr>

	* ov-intx.h (OCTAVE_VALUE_INT_MATRIX_T::double_value,
	OCTAVE_VALUE_INT_MATRIX_T::scalar_value,
	OCTAVE_VALUE_INT_SCALAR_T::double_value,
	OCTAVE_VALUE_INT_SCALAR_T::scalar_value): New functions.

2004-09-10  John W. Eaton  <jwe@octave.org>

	* ov-base-scalar.h (octave_base_scalar::clone,
	octave_base_scalar::empty_clone): New functions.

2004-09-09  John W. Eaton  <jwe@octave.org>

	* pt-pr-code.h (tree_print_code::newline): New optional arg, alt_nl.
	* pt-pr-code.cc (tree_print_code::newline): Use it if not printing
	newlines.
	(tree_print_code::visit_statement): If we printed ";", call
	newline with optional arg set to "".
	(tree_print_code::printing_newlines): New data member.
	(tree_print_code::tree_print_code): Initialize it.
	(tree_print_code::suspend_newline, tree_print_code::resume_newline):
	New functions.
	(tree_print_code::newline, tree_print_code::indent): Use it

	* ov-fcn-handle.cc (octave_fcn_handle::print_raw):